[package]
name = "chip8_emu"
version = "0.1.0"
authors = ["SilentVoid13 <silentvoid13@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.2"
rand = "0.7.3"
minifb = "0.17"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["gfx"]
